--- a/calc/app.css
+++ b/calc/app.css
@@ -5,7 +5,22 @@
   box-sizing: border-box;
 }
 
+
+body {
+  background: black;
+  font-family: 'Poppins', sans-serif;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  overflow-y: hidden;
+  margin: 0;
+  padding: 0;
+  grid-template-areas: "main";
+}
+
 main{
+  grid-area: main;
   scroll-snap-type: x mandatory;
   overflow-x: auto;
   overflow-y: hidden;
@@ -25,16 +40,38 @@ main > * {
   align-content: center;
 }
 
-body {
-  background: black;
-  font-family: 'Poppins', sans-serif;
+@keyframes asidegone {
+  0%{opacity: 1;}
+  100%{opacity: 0;}
+}
+
+@keyframes swipeleft {
+  0%{transform: translateX(10vh);}
+  100%{transform: translateX(-10vh)}
+}
+
+#help{
   display: grid;
-  justify-content: center;
-  align-items: center;
+  animation: asidegone 2s cubic-bezier(0.4, 0, 1, 1) 1s forwards;
+  grid-area: main;
+  font-size: 1.5rem;
+  text-align: center;
+  color: white;
+  width: 100vw;
   height: 100vh;
-  overflow-y: hidden;
-  margin: 0;
-  padding: 0;
+  background-color: #00000099;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  pointer-events: none;
+  z-index: 3;
+}
+
+#help > p.swipeleft {
+  font-size: 3rem;
+  animation: swipeleft 1s ease-in-out 0s 4 alternate;
+  filter: drop-shadow(1px 3px 2px black);
 }
 
 #titulo {
@@ -181,6 +218,7 @@ input[type=number] {
 }
 
 @media (min-aspect-ratio: 1 / 1) {
+ 
   #titulo{
     display: flex;
     align-items: center;
@@ -228,9 +266,6 @@ input[type=number] {
   overscroll-behavior-y: contain;
   scroll-snap-align: center;
   scroll-margin: 5vh;
-}
-
-#grafico > * > div:last-child{
 }
 
 #grafico > * > div:first-child{scroll-margin: 10vh;}
