--- a/calc/app.css
+++ b/calc/app.css
@@ -39,33 +39,6 @@ main > * {
   align-content: center;
 }
 
-#helpswipe{
-  display: grid !important;
-  animation: helpgone 1s cubic-bezier(0.4, 0, 1, 1) 1s forwards;
-  grid-area: main;
-  font-size: 1.5rem;
-  text-align: center;
-  color: white;
-  width: 100vw;
-  height: 100vh;
-  background-color: #000000dd;
-  justify-content: center;
-  align-content: center;
-  justify-items: center;
-  pointer-events: none;
-  z-index: 3;
-}
-
-#helpswipe > p {
-  font-size: 3rem;
-  animation: swipeleft 1s ease-in-out 0s 6 alternate;
-  filter: drop-shadow(1px 3px 2px black);
-}
-
-#helpswipe > div{
-  width: 10rem;
-}
-
 @keyframes helpgone {
   0%{opacity: 1;}
   100%{opacity: 0;}
@@ -85,44 +58,6 @@ main > * {
     transform: scale(0.9);
 }
 }
-
-/* #helptouch{
-  visibility: hidden;
-  display: grid;
-  grid-area: main;
-  font-size: 2rem;
-  text-align: center;
-  color: #fdd73f;
-  pointer-events: none;
-  z-index: 3;
-  filter: drop-shadow(2px 2px 2px #00000050);
-  text-transform: uppercase;
-  justify-self: center;
-  font-weight: bold;
-  background-color: orangered;
-  border-radius: 20px;
-  padding: 2rem;
-  max-width: 80vw;
-  width: 100vw;
-}
-
-#helptouch.active{
-  visibility: visible !important;
-  animation: helpgone 3s cubic-bezier(0.4, 0, 1, 1) 0s forwards;
-}
-
-#helptouch.active > p{
-  font-size: 10rem;
-  animation: touchtouch 1s ease-in-out 0s 10 alternate;
-  line-height: 0;
-  width: 100%;
-  filter: drop-shadow(2px 2px 2px #00000050);
-}
-
-#helptouch > div{
-  width: 100%;
-  filter: drop-shadow(3px 3px 5px #00000050);
-  /* animation: touchtouch 1s ease-in-out 0s 10 alternate;} */
 
 #titulo {
   background-image: linear-gradient(-45deg,
@@ -257,7 +192,7 @@ input[type=number] {
   filter: drop-shadow(2px 2px 2px #00008C66);
   transition: all 500ms ease-in;
   font-size: clamp(1rem, 0.25rem, 2rem);
-  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .btnmostrar:disabled {
@@ -283,6 +218,8 @@ input[type=number] {
     width: 100vw;
   }
   
+  #helpswipe{display: none !important; }
+
   #titulo {
   grid-template-columns: 1fr 1fr;
   justify-items: center;
@@ -316,11 +253,36 @@ input[type=number] {
   }
 
   #card-i{
-    max-width: 500px;
-    max-height: 500px;
+    max-width: 600px;
+    max-height: 650px;
   }
+}
 
-  #helpswipe{display: none;}
+#helpswipe{
+  display: grid;
+  animation: helpgone 1s cubic-bezier(0.4, 0, 1, 1) 1s forwards;
+  grid-area: main;
+  font-size: 1.5rem;
+  text-align: center;
+  color: white;
+  width: 100vw;
+  height: 100vh;
+  background-color: #000000dd;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  pointer-events: none;
+  z-index: 3;
+}
+
+#helpswipe > div{
+  width: 10rem;
+}
+
+#helpswipe > p {
+  font-size: 3rem;
+  animation: swipeleft 1s ease-in-out 0s 6 alternate;
+  filter: drop-shadow(1px 3px 2px black);
 }
 
 #grafico > div{
@@ -445,15 +407,15 @@ a.nomegeracao:hover {
 }
 
 #card-i{
-  width: 75vw;
-  height: 70vh;
+  width: 90vw;
+  height: 90vh;
   transition: transform 1s 1s;
   transform-style: preserve-3d;
   display: grid;
   justify-items: center;
   align-items: center;
   font-size: 0.85rem;
-  font-size: clamp(0.9rem, 1vh + 0.25rem, 1.5rem);
+  font-size: clamp(1.1rem, 1rem, 2rem);
   }
 
 #card-i.virar {
