--- a/calc/exp/app.css
+++ b/calc/exp/app.css
@@ -163,7 +163,7 @@ input::placeholder{
   color: white;
 }
 
-.btnmostrar {
+.butcalcular {
   background-image: linear-gradient(#42A1EC, #0070C9);
   border: 1px solid #0077CC;
   border-radius: 10px;
@@ -177,12 +177,12 @@ input::placeholder{
   margin: 1rem 0;
 }
 
-.btnmostrar:disabled {
+.butcalcular:disabled {
   cursor: default;
   opacity: 0;
 }
 
-.btnmostrar:hover {
+.butcalcular:hover {
   background-image: linear-gradient(#51A9EE, #147BCD);
   border-color: #1482D0;
   text-decoration: none;
@@ -274,24 +274,24 @@ input::placeholder{
   opacity: 0;
 }
 
-.blocos>div.mostrar, .blocos>div.mostrar::before, .blocos>div.mostrar::after {
+.blocos>div.mostrar{ 
   background: #ffbf0025;
   color: black;
   font-weight: bold;
   cursor: pointer;
-  opacity: 1;
+}
+
+.blocos>div.mostrar::before{
+  color: black;
+  border-block-color: #00000050;
+  background-color: transparent !important;
 }
 
 .blocos>div.mostrar::after {
-  content: attr(data-fim);
-  position: absolute;
-  letter-spacing: 0.6vmin;
-  left: -25%;
-  text-align: left;
-  width: 125%;
-  color: #aaa;
-  border-bottom: 3px solid #00000030;
+  color: black;
+  border-bottom: 3px solid #00000050;
   background-color: transparent !important;
+  opacity: 1;
 }
 
 .nomegeracao{
