--- a/calc/exp/app.css
+++ b/calc/exp/app.css
@@ -287,7 +287,7 @@ input::placeholder{
   background-color: transparent !important;
 }
 
-.blocos>div.mostrar::after {
+.blocos>div.mostrar.expandir::after {
   color: black;
   border-bottom: 3px solid #00000050;
   background-color: transparent !important;
@@ -348,6 +348,23 @@ a.nomegeracao:hover {
   height: 0;
   opacity: 0;
   width: 0;
+}
+
+.timeline {
+  z-index: 1;
+}
+
+.timeline>div{
+  height: attr(data-posicao);
+  width: 125%;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 3px solid blue;
+  color:black;
+  font-weight: bold;
+  align-items: flex-end;
+  font-size: clamp(1vmin, 5rem + 5vmax, 15vmin);
+  line-height: 0.9;
 }
 
 #card-i{
